03-RESOLUCAO-LABS/LAB01/01-vpc.tf
resource "aws_vpc" "vpc-lab01" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc-lab01"
  }
}
